--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1164,7 +1164,7 @@ input, select, textarea {
 			background-repeat: no-repeat;
 			z-index: 1;
 		}
-
+		/*shizuku test*/
 		body.is-article-visible #bg:after {
 			-moz-transform: scale(1.0825);
 			-webkit-transform: scale(1.0825);
